Updated footer and carousel

--- a/menyow.html
+++ b/menyow.html
@@ -75,16 +75,8 @@
         </div>
     </main>
     <footer>
-        <p>© 2024 ASoftGlow</p>
-        <a href="mailto:me@asoftglow.dev" style="display: flex;column-gap: 1ch;">
-            <svg class="icon" id="email" width="1em" viewBox="1.25 -0.75 17.5 12.5">
-                <g stroke="currentColor" stroke-width="1.1" fill="none">
-                    <path d="M18,0 L10,8 L2,0 Z M2,0 L2,11 L18,11 L18,0 Z"></path>
-                </g>
-            </svg>
-            Contact
-        </a>
-        <p>This site is WIP</p>
+        <span>© 2024 ASoftGlow</span>
+        <a href="mailto:me@asoftglow.dev">✉ Contact</a>
     </footer>
 </body>
 
