--- a/hockey.html
+++ b/hockey.html
@@ -76,7 +76,7 @@ description: Web app
                 <p>
                     In the original project, players were hard coded. That's not ideal.
                     I added an add and remove player button to rectify that. Additionally, I gave the option to import players from a newline seperated text file, as to make it
-                    easier to add a bunch of players. <a download href="/assets/players.txt">Download example file</a><br>
+                    easier to add a bunch of players. <a download href="/hlp/examples/players.txt">Download example file</a><br>
                     Unlike the original, the players and their selected positions are saved between refreshes using <a
                         href="https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage">localStorage</a>.
                 </p>
