Added grandfather clock

--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
 					<li>
 						<a href="hockey">Hockey line picker</a>
 					</li>
+					<li>
+						<details>
+							<summary>Misc</summary>
+							<ul>
+								<li>
+									<a href="misc/clock.html">Terraria clock</a>
+								</li>
+							</ul>
+						</details>
+					</li>
 				</ul>
 			</div>
 		</div>
