--- a/cat-generator.html
+++ b/cat-generator.html
@@ -7,7 +7,11 @@ description: Pixel art image generator
 
 <head>
     {% include 'head' %}
-    <link rel="stylesheet" href="/css/cat-generator.css">
+    <style>
+        #cat-img {
+            image-rendering: pixelated;
+        }
+    </style>
 </head>
 
 <body>
