--- a/index.html
+++ b/index.html
@@ -2,19 +2,53 @@
 <html lang="en-US">
 
 <head>
-	{% include 'head', test: 'idk' %}
+	{% include 'head' %}
 	<link rel="stylesheet" href="css/index.css">
 	<link rel="preload" href="fonts/Moderne Sans Font.ttf" as="font" type="font/ttf">
+	<style>
+		#title {
+			text-align: center;
+			font-size: 60px;
+			word-spacing: -0.7ch;
+		}
+
+		#suptitle {
+			text-align: center;
+			font-size: 40px;
+			font-weight: 100;
+			margin-bottom: -1em;
+		}
+
+		@media screen and (max-width: 420px) {
+			#title {
+				font-size: 40px;
+			}
+
+			#suptitle {
+				font-size: 25px;
+			}
+		}
+
+		#bio {
+			p {
+				text-align: center;
+				margin-bottom: 30px;
+			}
+		}
+
+		.disabled-a {
+			cursor: not-allowed;
+		}
+	</style>
 </head>
 
 <body>
 	<main>
-		<h1 id="suptitle">I'm</h1>
 		<h1 id="title">A Soft Glow</h1>
 		<div id="bio">
-			<p>A highschool student who dabbles in programming.</p>
+			<p>I'm a student who dabbles in programming.</p>
 			<p>I've messed around with
-				<b>web design</b>, <b>Python</b>, <br><b>Typescript</b>, <b>C#</b>, <b>C</b>, and <b>C++</b>.
+				<b>web design</b>, <b>Python</b>, <br><b>Typescript</b>, <b>Java</b>, <b>C#</b>, <b>C</b>, and <b>C++</b>.
 			</p>
 		</div>
 		<div class="dotted divider"></div>
@@ -36,6 +70,9 @@
 					</li>
 					<li>
 						<a href="hockey">Hockey line picker</a>
+					</li>
+					<li>
+						<a href="tot">The Oregon Trail</a>
 					</li>
 					<li>
 						<details>
