--- a/menyow.html
+++ b/menyow.html
@@ -1,6 +1,7 @@
 ---
 title: Menyow
 description: Discord bot
+image: '/images/menyow/sc.png'
 ---
 <!DOCTYPE html>
 <html lang="en-US">
@@ -12,7 +13,7 @@ description: Discord bot
 
 <body>
     <main>
-        {% include 'project-header', image: 'https://cdn.discordapp.com/app-icons/809180078079606825/5047e7c1d83641f76392ade8112b8312.png?size=64' %}
+        {% include 'project-header' %}
         <p>
             At some point, my friend group moved from <a href="https://steampowered.com">Steam</a> to <a href="https://discord.com">Discord</a> for communication.
             Before then, I had never used Discord. One advantage it had over Steam was bots.
