--- a/terrain.html
+++ b/terrain.html
@@ -15,14 +15,14 @@ title: Terrain Generator
         <article>
             <div class="elevation carousel">
                 <figure>
-                    <img src="/images/terrain.png">
+                    <img src="/images/terrain/terrain.png">
                 </figure>
                 <figure>
-                    <img src="/images/save_browser.png" alt="Save Browser">
+                    <img src="/images/terrain/save_browser.png" alt="Save Browser">
                     <figcaption>Save browser</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/import_save.png" alt="Import save">
+                    <img src="/images/terrain/import_save.png" alt="Import save">
                     <figcaption>Import save</figcaption>
                 </figure>
             </div>
@@ -94,7 +94,7 @@ title: Terrain Generator
                 <h2>Save system</h2>
 
                 <figure>
-                    <img width="32px" src="/images/glowsave.ico" alt="glowsave icon" style="image-rendering: pixelated;">
+                    <img width="32px" src="/images/terrain/glowsave.ico" alt="glowsave icon" style="image-rendering: pixelated;">
                     <figcaption style="display: inline-block;"><code>.glowsave</code> file type icon</figcaption>
                 </figure>
                 <details open style="position: relative;">
@@ -154,7 +154,7 @@ title: Terrain Generator
             <section>
                 <h2>Generation</h2>
                 <figure>
-                    <img src="/images/mesh.png" alt="Triangles mesh view">
+                    <img src="/images/terrain/mesh.png" alt="Triangles mesh view">
                     <figcaption>Debug line view, showing triangles</figcaption>
                 </figure>
                 <h3>Issues</h3>
