Updated favicon tot - Added color to tuis hlp - Added icon

--- a/hockey.html
+++ b/hockey.html
@@ -1,6 +1,7 @@
 ---
 title: Hockey Line Picker
-description: Web app
+description: A simple webapp for picking hockey lineups.
+image: '/hlp/imgs/puck192.png'
 ---
 <!DOCTYPE html>
 <html lang="en-US">
