--- a/website.html
+++ b/website.html
@@ -1,7 +1,7 @@
 ---
 title: ASoftGlow.dev
 description: Static website
-image: '/images/favicon.png'
+image: '/images/favicon.ico'
 ---
 <!DOCTYPE html>
 <html lang="en-US">
