--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 
 <head>
 	{% include 'head' %}
-	<link rel="stylesheet" href="css/index.css">
-	<link rel="preload" href="fonts/Moderne Sans Font.ttf" as="font" type="font/ttf">
 	<style>
 		#title {
 			text-align: center;
@@ -48,7 +46,7 @@
 		<div id="bio">
 			<p>I'm a student who dabbles in programming.</p>
 			<p>I've messed around with
-				<b>web design</b>, <b>Python</b>, <br><b>Typescript</b>, <b>Java</b>, <b>C#</b>, <b>C</b>, and <b>C++</b>.
+				<b>web design</b>, <b>game development</b>, and more using<br><b>Python</b>, <b>Typescript</b>, <b>Java</b>, <b>C#</b>, <b>C</b>, and <b>C++</b>.
 			</p>
 		</div>
 		<div class="dotted divider"></div>
