--- a/passthrough/404.html
+++ b/passthrough/404.html
@@ -17,12 +17,12 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
-<body>
+<body style="justify-content: center;">
     <main style="text-align: center;">
-        <h1 style="font-size: min(18lvw, 10em); margin-bottom: 0;">404</h1>
+        <h1 style="font-size: min(18lvw, 10em); margin: 0;">404</h1>
         <p>
             <script>
-                // poor-man's PHP
+                // lazy-man's PHP
                 document.currentScript.parentElement.textContent = ["Meow", "mew", "MEOW", "Meowow!", "meow", "meow?", "🐈"][Math.floor(Math.random() * 7)];
             </script>
         </p>
